Change project name

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angularjs-boilerplate",
-  "version": "1.1.7",
+  "name": "concentration-angularjs",
+  "version": "0.0.1",
   "license": "MIT",
-  "description": "Simple AngularJS Boilerplate to kick start your new project with SASS support and Gulp watch/build tasks",
+  "description": "Classical cards matching game written in AngularJS",
   "main": "app/app.js",
   "devDependencies": {
     "browser-sync": "^1.9.1",
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jbutko/AngularJS-Boilerplate.git"
+    "url": "https://github.com/taydakov/concentration-angularjs"
   },
   "keywords": [
     "angular",
@@ -52,10 +52,10 @@
     "single-page",
     "spa"
   ],
-  "author": "Jozef Butko",
-  "docs": "https://github.com/jbutko/AngularJS-Boilerplate/blob/master/README.md",
+  "author": "Lev Taydakov",
+  "docs": "https://github.com/taydakov/concentration-angularjs/blob/master/README.md",
   "bugs": {
-    "url": "https://github.com/jbutko/AngularJS-Boilerplate/issues"
+    "url": "https://github.com/taydakov/concentration-angularjs/issues"
   },
-  "homepage": "https://github.com/jbutko/AngularJS-Boilerplate"
+  "homepage": "https://github.com/taydakov/concentration-angularjs"
 }
