--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,16 @@
 {
-  "name": "AngularJS Boilerplate",
-  "version": "1.1.7",
+  "name": "Concentration Game written in AngularJS",
+  "version": "0.0.1",
   "authors": [
-    "jozef butko <jbutko@gmail.com> / jozefbutko.com/resume"
+    "lev taydakov / taydakov.com"
   ],
-  "description": "Description goes here",
+  "description": "Classical cards matching game written in AngularJS",
   "main": "app.js",
   "keywords": [
     "angularjs"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/jbutko/AngularJS-Boilerplate",
+  "homepage": "https://github.com/taydakov/concentration-angularjs",
   "private": false,
   "ignore": [
     "**/.*",
