--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "angular": "~1.3.13",
     "angular-route": "~1.3.13",
-    "angular-sanitize": "~1.3.13"
+    "angular-sanitize": "~1.3.13",
+    "angular-animate": "~1.4.6",
+    "lodash": "~3.10.1"
   }
 }
